<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="teste">hhhhhh</string>
    <string name="email">Email</string>
    <string name="digite_seu_email">Digite seu email :</string>
    <string name="digite_seu_cep">CEP :</string>
    <string name="digite_sua_senha">Digite sua senha :</string>
    <string name="confirm_sua_senha">Confirme sua senha :</string>
    <string name="login">Login</string>
    <string name="enter_app_login">Entrar</string>
    <string name="ainda_nao_tem_cadastro">Ainda não possue cadastro ?</string>
    <string name="cadastrese"> Cadastre-se</string>
    <string name="cadastrar_endereco">Cadastrar Endereço</string>
    <string name="remember">Lembrar</string>
    <string name="esqueceu_sua_senha">Esqueceu sua senha ?</string>
    <string name="registre_se">Registre-se</string>
    <string name="reset_password">Recuperar Senha</string>
    <string name="digite_seu_nome">Nome :</string>
    <string name="digite_seu_sobrenome">Sobrenome :</string>
    <string name="digite_seu_nickname">Digite seu nickname (Apelido)</string>
    <string name="remember_password_login">Lembrar senha</string>
    <string name="or_connect_account">Ou conecte com sua conta</string>
    <string name="register_address">Cadastrar Endereço</string>
    <string name="create_your_account">Ou crie uma conta</string>
</resources>